tests/error/union_object_ref.gw
#! [contains] In union, Objects must be declared as reference (use '@')
union
{
	int i;
	Object o;

};
<<< i, " ", o >>>;
